# Systems-Architecture

./: .gitignore
lab1/: workspace.json
lab2/: docker-compose.yml  init_table.py  requirements.txt  user_service.Dockerfile  user_service.Dockerfile.dockerignore
lab2/config/: config.cpp  config.h
lab2/database/: database.cpp  database.h  user.cpp  user.h
lab2/server/: http_server.h
lab2/user_service/: CMakeLists.txt  http_request_factory.h  index.yml  main.cpp  start.sh
lab2/user_service/handlers/: user_handler.cpp  user_handler.h
